<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fon_activity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <Button
            android:id="@+id/btnGet"
            android:layout_width="64dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="GET"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:background="@drawable/roundedbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintStart_toEndOf="@+id/etPutCity"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etPutCity"
            android:layout_width="163dp"
            android:layout_height="41dp"
            android:layout_marginStart="108dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Put your city"
            android:fontFamily="monospace"
            android:textStyle="bold"

            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTemp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="124dp"
            android:layout_marginTop="8dp"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"

            android:textSize="40dp"
            app:layout_constraintEnd_toStartOf="@+id/ivIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPutCity" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"

            android:layout_marginStart="8dp"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewPressureFinal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="59dp"
            android:layout_height="57dp"
            android:layout_marginEnd="112dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPutCity" />

        <TextView
            android:id="@+id/textViewWindFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:text="Wind:"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"

            app:layout_constraintBottom_toTopOf="@+id/tvWind"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewPressureFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="Pressure:"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"

            app:layout_constraintBottom_toTopOf="@+id/tvPressure"
            app:layout_constraintEnd_toStartOf="@+id/textViewvHumidityFinal"
            app:layout_constraintStart_toEndOf="@+id/textViewWindFinal" />

        <TextView
            android:id="@+id/textViewvHumidityFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:text="Humidity:"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"

            app:layout_constraintBottom_toTopOf="@+id/tvHumidity"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvWind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="monospace"
            android:textColor="@color/colorAccent"

            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvHumidity"
            app:layout_constraintHorizontal_bias="0.43"
            app:layout_constraintStart_toEndOf="@+id/tvWind" />

        <TextView
            android:id="@+id/tvHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="monospace"

            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textView5DayWeatherForecastFinal"
        android:background="@drawable/fon_adapter"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"

        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center"
        android:text="@string/_5_day_forecast" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:background="@drawable/fon_adapter"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>

